# llm-environment

./: .gitignore  Dockerfile  LICENSE  README.md  hashpass.py  llava.sh  pyproject.toml  start.sh
.github/workflows/: push-to-docker-hub.yml
docker/: .Dockerfile.2.swp  Dockerfile  Dockerfile.2  Dockerfile.llava  build.sh  llava-entrypoint.sh
notebooks/: chat.py  llm-test.ipynb  platform.py  platform_settings.py
